--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ website: http://bukkit.org
 version: 1.0
 commands:
   permissions:
-    aliases: perms
+    aliases: [ perms, perm ]
     description: Commands for manipulating permissions.
     usage: |
         /<command> reload - reload the configuration from disk.
