--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.bukkit</groupId>
-  <artifactId>bukkit-permissions</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <artifactId>PermissionsBukkit</artifactId>
+  <version>1.2</version>
   <name>PermissionsBukkit</name>
   <url>http://www.bukkit.org</url>
   <build>
