--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: PermissionsBukkit
 main: com.platymuus.bukkit.permissions.PermissionsPlugin
-author: The Bukkit Team
+author: SpaceManiac
 website: http://bukkit.org
-version: 1.1
+version: 1.5
 commands:
   permissions:
     aliases: [ perms, perm ]
