--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: PermissionsBukkit
 main: com.platymuus.bukkit.permissions.PermissionsPlugin
 author: SpaceManiac
-version: ${version}
+version: 1.7.1
 
 # commands
 commands:
