Up version to 2.0 for development

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@
 name: PermissionsBukkit
 main: com.platymuus.bukkit.permissions.PermissionsPlugin
 author: SpaceManiac
-website: http://bukkit.org
+website: http://dev.bukkit.org/server-mods/permbukkit/
 version: ${version}
 
 # commands
