--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.platymuus</groupId>
     <artifactId>bukkit-permissions</artifactId>
-    <version>1.6</version>
+    <version>2.0</version>
     <name>PermissionsBukkit</name>
-    <url>http://www.bukkit.org</url>
+    <url>http://dev.bukkit.org/server-mods/permbukkit/</url>
     <build>
         <plugins>
             <plugin>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.1-R5-SNAPSHOT</version>
+            <version>1.2.5-R3.1-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
