--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,23 @@
     <version>2.0</version>
     <name>PermissionsBukkit</name>
     <url>http://dev.bukkit.org/server-mods/permbukkit/</url>
+
+    <repositories>
+      <!-- Bukkit repository -->
+      <repository>
+        <id>bukkit</id>
+        <url>http://repo.bukkit.org/content/groups/public</url>
+      </repository>
+    </repositories>
+
+    <dependencies>
+       <dependency>
+         <groupId>org.bukkit</groupId>
+         <artifactId>bukkit</artifactId>
+         <version>1.3.1-R2.0</version>
+       </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -25,13 +42,4 @@
             </resource>
         </resources>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.2.5-R3.1-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 </project>
