--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.2.5-R3.1-SNAPSHOT</version>
+            <version>1.3.1-R1.0</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
