Added some ridiculously fancy stats tracking

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.mcstats</groupId>
-            <artifactId>metrics-lite</artifactId>
+            <artifactId>metrics</artifactId>
             <version>1.1</version>
             <scope>compile</scope>
         </dependency>
